<?xml version="1.0"?>
<package>
  <name>cram_prediction</name>
  <version>0.0.0</version>
  <description>The cram_prediction package</description>

  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cram_language</build_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>cl_transforms_stamped</build_depend>
  <build_depend>alexandria</build_depend>

  <run_depend>cram_language</run_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>cl_transforms_stamped</run_depend>
  <run_depend>alexandria</run_depend>

</package>
